Added search functionality

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 TODO de Angular:
--Creacion IU sencilla.
--Creacion de Añadir Notas
 -Base de Datos??
 -Eliminar Notas
 -Editar Notas
+-Buscar Notas
